fix(Sidebar): add proper z-index to `.sidebar-overlaid`

--- a/scss/sidebar/_sidebar.scss
+++ b/scss/sidebar/_sidebar.scss
@@ -27,7 +27,8 @@
 
   &.sidebar-fixed,
   &.sidebar-narrow,
-  &.sidebar-narrow-unfoldable {
+  &.sidebar-narrow-unfoldable,
+  &.sidebar-overlaid {
     z-index: var(--#{$prefix}sidebar-zindex);
   }
 
